--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.13.1"
 psycopg2 = "^2.9.3"
 django-environ = "^0.8.1"
 gunicorn = "^20.1.0"
+whitenoise = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
