--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,9 +9,9 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
-  # redis:
-  #   image: 'redis:3.2.0'
-  #   ports:
-  #     - '6379:6379'
-  #   volumes:
-  #     - ./data/redis:/data:z
+  redis:
+    image: 'redis'
+    ports:
+      - '6379:6379'
+    volumes:
+      - ./data/redis:/data:z
