--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ psycopg2 = "^2.9.3"
 django-environ = "^0.8.1"
 gunicorn = "^20.1.0"
 whitenoise = "^6.0.0"
+twilio = "^7.8.1"
+django-anymail = {extras = ["mailgun"], version = "^8.5"}
+redis = "^4.2.2"
+django-redis = "^5.2.0"
+celery = "^5.2.6"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
