--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5432:5432"
   redis:
-    image: 'redis'
+    image: redis:6
     ports:
       - '6379:6379'
     volumes:
