--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ django-anymail = {extras = ["mailgun"], version = "^8.5"}
 redis = "^4.2.2"
 django-redis = "^5.2.0"
 celery = "^5.2.6"
+django-crispy-forms = "^1.14.0"
+crispy-tailwind = "^0.5.0"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
