--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ crispy-tailwind = "^0.5.0"
 python-dateutil = "^2.8.2"
 django-celery-beat = "^2.2.1"
 djangorestframework = "^3.13.1"
+pyotp = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
