--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ python-dateutil = "^2.8.2"
 django-celery-beat = "^2.2.1"
 djangorestframework = "^3.13.1"
 pyotp = "^2.6.0"
+pip = "^22.0.4"
+install = "^1.3.5"
+djangorestframework-api-key = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
