--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyotp = "^2.6.0"
 pip = "^22.0.4"
 install = "^1.3.5"
 djangorestframework-api-key = "^2.2.0"
+django-cors-headers = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
