--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,15 @@ pip = "^22.0.4"
 install = "^1.3.5"
 djangorestframework-api-key = "^2.2.0"
 django-cors-headers = "^3.11.0"
+aiofiles = "0.6.0"
+camelot-py = "0.10.1"
+lxml = "4.6.3"
+Jinja2 = "2.11.2"
+opencv-python-headless = "4.5.5.64"
+pandas = "1.3.4"
+python-multipart = "0.0.5"
+pytz = "2021.3"
+ghostscript = "0.7"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
