--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pandas = "1.3.4"
 python-multipart = "0.0.5"
 pytz = "2021.3"
 ghostscript = "0.7"
+django-jazzmin = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
