--- a/requirements.txt
+++ b/requirements.txt
@@ -91,7 +91,7 @@ click-repl==0.2.0; python_version >= "3.7" \
 click==8.1.3; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.7" \
     --hash=sha256:bb4d8133cb15a609f44e8213d9b391b0809795062913b383c62be0ee95b1db48 \
     --hash=sha256:7682dc8afb30297001674575ea00d1814d808d6a36af415a82bd481d37ba7b8e
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0" \
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows" and python_version >= "3.7" \
     --hash=sha256:9f47eda37229f68eee03b24b9748937c7dc3868f906e8ba69fbcbdd3bc5dc3e2 \
     --hash=sha256:5941b2b48a20143d2267e95b1c2a7603ce057ee39fd88e7329b0c292aa16869b
 crispy-tailwind==0.5.0; python_version >= "3.5" \
@@ -138,6 +138,9 @@ django-crispy-forms==1.14.0; python_version >= "3.7" \
 django-environ==0.8.1; python_version >= "3.4" and python_version < "4" \
     --hash=sha256:6f0bc902b43891656b20486938cba0861dc62892784a44919170719572a534cb \
     --hash=sha256:42593bee519a527602a467c7b682aee1a051c2597f98c45f4f4f44169ecdb6e5
+django-extensions==3.1.5; python_version >= "3.6" \
+    --hash=sha256:28e1e1bf49f0e00307ba574d645b0af3564c981a6dfc87209d48cb98f77d0b1a \
+    --hash=sha256:9238b9e016bb0009d621e05cf56ea8ce5cce9b32e91ad2026996a7377ca28069
 django-jazzmin==2.5.0; python_full_version >= "3.6.2" \
     --hash=sha256:2ee5ea548e9d5d6cf6495025d006b063ecae84702304eb90c9c5ef37ba99078a \
     --hash=sha256:6b9f9951eee41f60793a0d2f6f3d57213bd5605ddda7a106acb2bcdec4ef124e
@@ -385,9 +388,12 @@ sqlparse==0.4.2; python_version >= "3.7" and python_full_version >= "3.6.2" \
 tabulate==0.8.9 \
     --hash=sha256:d7c013fe7abbc5e491394e10fa845f8f32fe54f8dc60c6622c6cf482d25d47e4 \
     --hash=sha256:eb1d13f25760052e8931f2ef80aaf6045a6cceb47514db8beab24cded16f13a7
-twilio==7.8.2; python_full_version >= "3.6.0" \
-    --hash=sha256:f8d4288d39d20b1f57240c002051224fdd63850f570812a62d9b025ee4954e43 \
-    --hash=sha256:59ca119442f7ed037eb64f2c90e771432418a08874fed72da99e4375cf44ad8f
+tqdm==4.64.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0") \
+    --hash=sha256:74a2cdefe14d11442cedf3ba4e21a3b84ff9a2dbdc6cfae2c34addb2a14a5ea6 \
+    --hash=sha256:40be55d30e200777a307a7585aee69e4eabb46b4ec6a4b4a5f2d9f11e7d5408d
+twilio==7.9.0; python_full_version >= "3.6.0" \
+    --hash=sha256:8de17f6c75fef9e342a681d6ade1c59791120b0bf06f35db7f23f0604d78daa1 \
+    --hash=sha256:1e0dbf3b012206b35d644758735966e4f565c1b2c2b09b10f7c1ddd02db43a36
 urllib3==1.26.9; python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.5" \
     --hash=sha256:44ece4d53fb1706f667c9bd1c648f5469a2ec925fcf3a776667042d645472c14 \
     --hash=sha256:aabaf16477806a5e1dd19aa41f8c2b7950dd3c746362d7e3223dbe6de6ac448e
