switch to http instead of https

--- a/compose/traefik/traefik.https.yml
+++ b/compose/traefik/traefik.https.yml
@@ -5,25 +5,50 @@ entryPoints:
   web:
     # http
     address: ":80"
+    http:
+      # https://docs.traefik.io/routing/entrypoints/#entrypoint
+      redirections:
+        entryPoint:
+          to: web-secure
+
+  web-secure:
+    # https
+    address: ":443"
 
   flower:
     address: ":5555"
 
+certificatesResolvers:
+  letsencrypt:
+    # https://docs.traefik.io/master/https/acme/#lets-encrypt
+    acme:
+      email: ""
+      storage: /etc/traefik/acme/acme.json
+      # https://docs.traefik.io/master/https/acme/#httpchallenge
+      httpChallenge:
+        entryPoint: web
+
 http:
   routers:
-    web-router:
+    web-secure-router:
       rule: "Host(`68.183.90.211`)"
       entryPoints:
-        - web
+        - web-secure
       middlewares:
         - csrf
       service: django
+      tls:
+        # https://docs.traefik.io/master/routing/routers/#certresolver
+        certResolver: letsencrypt
 
     flower-secure-router:
       rule: "Host(`68.183.90.211`)"
       entryPoints:
         - flower
       service: flower
+      tls:
+        # https://docs.traefik.io/master/routing/routers/#certresolver
+        certResolver: letsencrypt
 
   middlewares:
     csrf:
