--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ django-extensions = "^3.1.5"
 tqdm = "^4.64.0"
 urllib3 = "^1.26.9"
 pdfminer = "^20191125"
+flower = "^1.0.0"
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
 
