--- a/requirements.txt
+++ b/requirements.txt
@@ -30,8 +30,10 @@ django==3.2.13; python_version >= "3.6"
 djangorestframework-api-key==2.2.0; python_version >= "3.6"
 djangorestframework==3.13.1; python_version >= "3.6"
 et-xmlfile==1.1.0; python_version >= "3.6"
+flower==1.0.0
 ghostscript==0.7
 gunicorn==20.1.0; python_version >= "3.5"
+humanize==4.1.0; python_version >= "3.7"
 idna==3.3; python_version >= "3.5" and python_full_version >= "3.6.0"
 install==1.3.5; python_version >= "3.5"
 jinja2==3.1.2; python_version >= "3.7"
@@ -45,6 +47,7 @@ packaging==21.3; python_version >= "3.6"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pdfminer.six==20220319; python_version >= "3.6"
 pdfminer==20191125; python_version >= "3.6"
+prometheus-client==0.14.1; python_version >= "3.6"
 prompt-toolkit==3.0.29; python_full_version >= "3.6.2" and python_version >= "3.7"
 psycopg2==2.9.3; python_version >= "3.6"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -62,6 +65,7 @@ requests==2.27.1; python_full_version >= "3.6.0" and python_version >= "3.5"
 six==1.16.0; python_full_version >= "3.7.1" and python_version >= "3.7"
 sqlparse==0.4.2; python_version >= "3.6"
 tabulate==0.8.9
+tornado==6.1; python_version >= "3.5"
 tqdm==4.64.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 twilio==7.9.0; python_full_version >= "3.6.0"
 urllib3==1.26.9; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
