--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: postgres:14.2-alpine
     restart: always
     environment:
+      - CELERY_BROKER=$REDIS_URL
+      - CELERY_BACKEND=$REDIS_URL
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
@@ -24,6 +26,8 @@ services:
     volumes:
       - ../:/app
     environment:
+      - CELERY_BROKER=$REDIS_URL
+      - CELERY_BACKEND=$REDIS_URL
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
@@ -65,3 +69,5 @@ services:
       - celery-worker
 volumes:
   postgres_data:
+
+
