--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ tqdm = "^4.64.0"
 urllib3 = "^1.26.9"
 pdfminer = "^20191125"
 PyPDF2 = "^1.27.12"
+PyMuPDF = "^1.19.6"
 [tool.poetry.dev-dependencies]
 black = {version = "^22.3.0", allow-prereleases = true}
 
