Add proxy information as env variable

--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,4 @@ OTP_NUM_DIGITS=6
 OTP_EXPIRE_SECONDS=300
 FRONT_END_ORIGIN=http://localhost:3000
 LIGHT_OFF_API_KEY="cWkZpn4q.pamI7i8sVCV50e4hlmhESNWQv8b3BqYa"
+SCRAPER_PROXY = "https://user:pass@domain:port/
